--- a/login/static/html/login.html
+++ b/login/static/html/login.html
@@ -1,5 +1,5 @@
 <div class="login_block">
-    <h2>Inscription au Fun</h2>
+    <h2>Registering with ProctorU for an exam</h2>
 
     <form class="login" method="post" action="#">
         <table>
@@ -19,21 +19,21 @@
         <table>
             <tr>
                 <td><input id="autologin" name="autologin" type="checkbox"/>
-                    Do you have the account of ProctorU?
+                    Do you have an account with ProctorU?
                 </td>
             </tr>
             <tr>
                 <td><input id="createStudent" name="createStudent" type="checkbox"/>
-                    If not, do you want register in ProctorU with the same information?
+                    If not, do you want register with ProctorU with your EDX account information?
                 </td>
             </tr>
             <tr>
                 <td>
-                    <em>* If you don't log in ProctorU, you can't take an exam</em>
+                    <em>* If you don't register with ProctorU, you can't take an exam</em>
                 </td>
             </tr>
         </table>
-        <input id="reset" name="reset" type="reset" value="Reset"/>
+        <input id="reset" name="reset" type="button" value="Reset"/>
         <input id="submit" name="submit" type="button" value="Submit"/>
 
 
