--- a/login/static/html/login.html
+++ b/login/static/html/login.html
@@ -9,11 +9,11 @@
             </tr>
             <tr>
                 <td><label for="lastname">Lastname:</label></td>
-                <td><input id="lastname" name="lastname" placeholder="lastname" type="text" value="{last_name}"/></td>
+                <td><input id="lastname" name="lastname" placeholder="John" type="text" value="{last_name}"/></td>
             </tr>
             <tr>
                 <td><label for="firstname">Firstname:</label></td>
-                <td><input id="firstname" name="firstname" placeholder="firstname" type="text" value="{first_name}"/></td>
+                <td><input id="firstname" name="firstname" placeholder="Doe" type="text" value="{first_name}"/></td>
             </tr>
         </table>
         <table>
@@ -24,7 +24,7 @@
             </tr>
             <tr>
                 <td><input id="createStudent" name="createStudent" type="checkbox"/>
-                    If not, do you want register with ProctorU with your EDX account information?
+                    If not, do you want to register with ProctorU with your FUN account information?
                 </td>
             </tr>
             <tr>
